--- a/composer.json
+++ b/composer.json
@@ -18,26 +18,26 @@
     "ext-exif": "*",
     "ext-intl": "*",
     "barryvdh/laravel-dompdf": "^2.0",
-    "cartalyst/converter": "^7.0|^8.0",
+    "cartalyst/converter": "^9.0",
     "doctrine/dbal": "^3.6",
     "guzzlehttp/guzzle": "^7.3",
-    "illuminate/http": "^9.0|^10.0",
+    "illuminate/http": "^11.0",
     "kalnoy/nestedset": "^6.0",
-    "laravel/framework": "^9.0|^10.0",
+    "laravel/framework": "^11.0",
     "laravel/scout": "^9.4|^10.0",
-    "livewire/livewire": "^2.0",
+    "livewire/livewire": "^3.4",
     "lukascivil/treewalker": "0.9.1",
     "lunarphp/livewire-tables": "self.version",
     "spatie/laravel-activitylog": "^4.4",
     "spatie/laravel-blink": "^1.6",
-    "spatie/laravel-medialibrary": "^9.0.0|^10.0.0",
-    "spatie/laravel-permission": "^5.10"
+    "spatie/laravel-medialibrary": "^11.0",
+    "spatie/laravel-permission": "^6.0"
   },
   "require-dev": {
     "laravel/pint": "1.13.1",
     "mockery/mockery": "^1.4.4",
-    "orchestra/testbench": "^7.0|^8.0",
-    "phpunit/phpunit": "^9.5",
+    "orchestra/testbench": "^9.0",
+    "phpunit/phpunit": "^11.0",
     "symplify/monorepo-builder": "^10.0",
     "nunomaduro/larastan": "^2.0"
   },
